--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,19 @@ body {
   border: 1px solid #dfdfdf;
   outline: none;
 }
+
+.button {
+  /* display: inline-block; */
+  border-radius: 3px;
+  padding: 0.5rem 0;
+  margin: 0.5rem 1rem;
+  width: 5rem;
+  background: transparent;
+  color: rgb(67, 66, 66);
+  border: 2px solid rgb(82, 78, 78);
+  background-color: #dfdfdf;
+}
+
+.edit {
+  background-color: wheat;
+}
